tests/models/enum/unnamed/u8/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2)]
        u8
    ),
}
fn main() {}
